API Auth Activation User Part 2
